Add homepage boilerplate

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,3 +29,15 @@ h3 {
 .sub-heading-color {
     color: var(--highlight-color);
 }
+
+/*Temporary CSS for grid visualisation*/
+
+.container,
+.row {
+    border: 2px solid black;
+}
+
+.col-12 {
+    border: 2px solid white;
+    background-color: lightgray;
+}
