Create responsive navbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,7 +32,7 @@ h3 {
 
 /*Temporary CSS for grid visualisation*/
 
-.container,
+/*.container,
 .row {
     border: 2px solid black;
 }
@@ -40,4 +40,4 @@ h3 {
 .col-12 {
     border: 2px solid white;
     background-color: lightgray;
-}
+}*/
