Style the navbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,6 +30,15 @@ h3 {
     color: var(--highlight-color);
 }
 
+/*Navbar*/
+
+#navbar {
+    background-color: var(--primary-color);
+}
+
+#navbar .logo {
+    width: 30px;
+}
 /*Temporary CSS for grid visualisation*/
 
 /*.container,
