Add header text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@
     --highlight-color-light: #7a9fc2; /*Light blue*/
 }
 
-/*Generic styles*/
+/*Global styles*/
 
 body {
     font-family: var(--primary-font);
@@ -24,10 +24,16 @@ h2,
 h3 {
     font-family: var(--secondary-font);
     color: var(--primary-color);
+    text-transform: uppercase;
 }
 
 .sub-heading-color {
     color: var(--highlight-color);
+}
+
+.section {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
 }
 
 /*Navbar*/
@@ -39,6 +45,13 @@ h3 {
 #navbar .logo {
     width: 30px;
 }
+
+/*Header*/
+
+#header .lead {
+    font-family: var(--secondary-font);
+}
+
 /*Temporary CSS for grid visualisation*/
 
 /*.container,
