--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,6 +42,37 @@ h2 {
     margin-bottom: 2rem;
 }
 
+li {
+    list-style-type: none;
+}
+
+/* Buttons */
+
+.custom-button-filled {
+    border: 2px solid var(--highlight-color);
+    background-color: var(--highlight-color);
+    color: white;
+}
+
+.custom-button-filled:hover {
+    border: 2px solid var(--secondary-color);
+    background-color: var(--secondary-color);
+    color: white;
+}
+
+.custom-button-outline {
+    border: 3px solid var(--highlight-color);
+    background-color: white;
+    color: var(--highlight-color);
+    padding: 7px 25px;
+}
+
+.custom-button-outline:hover {
+    border: 3px solid var(--highlight-color);
+    background-color: var(--highlight-color);
+    color: white;
+}
+
 /* Navbar */
 
 #navbar {
