--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,7 @@
 
 body {
     font-family: var(--primary-font);
+    padding-top: 57.15px; /* pushes the top of the header down under fixed navbar */
 }
 
 h1,
@@ -38,12 +39,7 @@ h2 {
 }
 
 .section {
-    margin-top: 2rem;
-    margin-bottom: 2rem;
-}
-
-li {
-    list-style-type: none;
+    padding-top: 4rem; /* prevent navbar overlap */
 }
 
 /* Buttons */
@@ -62,15 +58,13 @@ li {
 
 .custom-button-outline {
     border: 3px solid var(--highlight-color);
-    background-color: white;
-    color: var(--highlight-color);
     padding: 7px 25px;
+    color: var(--highlight-color)
 }
 
 .custom-button-outline:hover {
-    border: 3px solid var(--highlight-color);
     background-color: var(--highlight-color);
-    color: white;
+    color: white
 }
 
 /* Navbar */
@@ -89,10 +83,6 @@ li {
     font-family: var(--secondary-font);
 }
 
-li .btn {
-    list-style-type: none;
-}
-
 /* Services */
 
 #services .card-footer {
@@ -105,6 +95,26 @@ li .btn {
     margin-bottom: 1.5rem;
 }
 
+/* Events */
+
+#events .table {
+    /* events table font size small enough that 
+      the table doesn't overflow on xs screens. 
+      Size set back to 1rem in a media query 
+      for sm screens and up */
+    font-size: 0.7rem;
+}
+
+.student-discount {
+    background-color: var(--highlight-color);
+    font-weight: bold;
+    color: white;
+    display: block;
+    max-width: 300px;
+    margin: auto;
+    padding: 5px 10px;
+    font-size: 0.8rem;
+}
 /* Game library cards */
 
 #new-games .card,
@@ -112,7 +122,7 @@ li .btn {
     border: none;
 }
 
-/*Footer / contact */
+/* Footer / contact */
 
 #contact {
     background-color: var(--primary-color);
@@ -161,6 +171,17 @@ li .btn {
 } */
 
 /* Media queries */
+
+/* Small screens and up */
+@media screen and (min-width: 576px) {
+    /* increase font size in events table when screen size is large enough */
+    #events .table {
+        font-size: 1rem;
+    }
+    .student-discount {
+        font-size: 1rem;
+    }
+}
 
 /* Medium devices (tablets, 768px and up) */
 @media screen and (min-width: 768px) {
